# VEMU

./: .gitignore  README.md  build-python-bindings.sh  build.sh  pyvemu_MCausc78-1.0.9-py3-none-any.whl  pyvemutest.vga  test.vga
.github/workflows/: build.yml  c-cpp.yml
Python Bindings/: pyvemu_MCausc78-1.0.0-py3-none-any.whl
bindings/python-bindings/: pyproject.toml  setup.py
bindings/python-bindings/pyvemu/: __init__.py  __main__.py  display.py  vemu.py  vga.py
examples/: README.md  freebsd.vga  freebsd.vga.cs  hello.vga  petya.vga
pyb/: pyvemu_MCausc78-1.0.6-py3-none-any.whl
src/vemu/: compiler.c  compiler.h  tty.c  tty.h  vemu.c  vemu.h  vga.c  vga.h
