[project]
name = "pyvemu_MCausc78"
version = "1.1.0"
authors = [
  { name="MCausc78", email="mcausc78@gmail.com" },
]
description = "VEMU bindings"
readme = "README.md"
requires-python = ">=3.3"
classifiers = [
	'Programming Language :: Python :: 3',
    'Intended Audience :: Developers',
    'License :: GPLv3 License',
    'Topic :: Software Development :: Libraries',
    'Topic :: Utilities',
    'License :: OSI Approved :: GPLv3 License',
    'Operating System :: OS Independent',
]

[project.urls]
"Homepage" = "https://github.com/MCausc78/VEMU/tree/master/bindings/python-bindings"
"Bug Tracker" = "https://github.com/MCausc78/VEMU/issues"